# local-aws-secret-manager

./: .gitignore  Cargo.toml  Makefile.toml  README.md  cspell.json  dist-workspace.toml
.github/workflows/: tests.yml
containers/: Build.Dockerfile  COMMANDS.md  prebuilt.alpine.Dockerfile  prebuilt.bookworm.Dockerfile
src/: background.rs  config.rs  json.rs  lib.rs  logging.rs  main.rs
src/background/: mod.rs  scheduler.rs
src/database/: mod.rs  secrets.rs
src/database/migrations/: m0_create_migrations_table.sql  m1_create_secrets_tables.sql  mod.rs
src/handlers/: batch_get_secret_value.rs  create_secret.rs  delete_secret.rs  describe_secret.rs  error.rs  get_random_password.rs  get_secret_value.rs  list_secret_version_ids.rs  list_secrets.rs  mod.rs  models.rs  put_secret_value.rs  restore_secret.rs  tag_resource.rs  untag_resource.rs  update_secret.rs  update_secret_version_stage.rs
src/middleware/: aws_sig_v4.rs  mod.rs
src/utils/: aws_sig_v4.rs  date.rs  filter.rs  mod.rs  string.rs
tests/: test.rs  test_batch_get_secret_value.rs  test_create_secret.rs  test_delete_secret.rs  test_describe_secret.rs  test_get_random_password.rs  test_get_secret.rs  test_get_secret_value.rs  test_list_secret_version_ids.rs  test_list_secrets.rs  test_put_secret_value.rs  test_restore_secret.rs  test_tag_resource.rs  test_untag_resource.rs  test_update_secret.rs  test_update_secret_version_stage.rs
tests/common/: mod.rs
