[package]
name = "local-aws-secret-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
# Environment variables
dotenvy = "=0.15.7"

# HTTP server implementation
axum = "0.8.6"
axum-server = { version = "=0.7.2", features = ["tls-rustls"]}

# Crypto provider
rustls = { version = "=0.23.33", features = ["aws-lc-rs"] }

tokio = { version = "1.48.0", features = ["full"] }

# Tower and utilities
tower = { version = "=0.5.2" }
tower-http = { version = "=0.6.6", features = ["limit", "cors", "trace"] }

# Error helper
thiserror = "=2.0.17"

# Tracing
tracing = "=0.1.41"
tracing-subscriber = { version = "=0.3.20", features = ["env-filter"] }

# File encryption for JSON file secrets manager
age = "=0.11.1"

# Bytes
bytes = "1.10.1"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
