[package]
name = "local-aws-secret-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
# Environment variables
dotenvy = "=0.15.7"

# HTTP server implementation
axum = "0.8.6"
axum-server = { version = "=0.7.2", features = ["tls-rustls"]}

# Crypto provider
rustls = { version = "=0.23.33", features = ["aws-lc-rs"] }

tokio = { version = "1.48.0", features = ["full"] }

# Tower and utilities
tower = { version = "=0.5.2" }
tower-http = { version = "=0.6.6", features = ["limit", "cors", "trace"] }

# Error helper
thiserror = "=2.0.17"

# Tracing
tracing = "=0.1.41"
tracing-subscriber = { version = "=0.3.20", features = ["env-filter"] }

# Bytes
bytes = "1.10.1"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
uuid = { version = "1.18.1", features = ["v4", "serde"] }

# Database
sqlx = { version = "=0.8.6", features = ["sqlite", "runtime-tokio", "chrono"] }
libsqlite3-sys = { version ="=0.30.1", features = ["bundled-sqlcipher-vendored-openssl"] }
chrono = { version = "0.4.42", features = ["serde"] }

strum = { version = "=0.27.2", features = ["derive"] }
http-body-util = "0.1.3"
itertools = "0.14.0"


# SHA256
sha2 = "0.10.9"

# HMAC
ring = "0.17.14"

# Hex encoding
hex = "0.4.3"
indexmap = { version = "2.12.0", features = ["serde"] }
futures = "0.3.31"


[dev-dependencies]
aws-config = { version = "=1.8.8", features = ["behavior-version-latest"] }
aws-sdk-secretsmanager = "=1.90.0"
